-UI feedback updates

--- a/AdHoc/res/drawable/list_divider.xml
+++ b/AdHoc/res/drawable/list_divider.xml
@@ -6,6 +6,6 @@
         android:dashGap="1px"
         android:dashWidth="1px"
         android:height="1px"
-        android:color="#97b443" />
+        android:color="#586927" />
 
 </shape>
