--- a/AdHoc/res/values/dimens.xml
+++ b/AdHoc/res/values/dimens.xml
@@ -6,5 +6,8 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="activity_vertical_small_margin">8dp</dimen>
     <dimen name="creation_seperator">16dp</dimen>
+    <dimen name="creation_seperator_small">12dp</dimen>
+    <dimen name="small_padding">5dp</dimen>
+    <dimen name="height_pb_attendance">50dp</dimen>
 
 </resources>
