--- a/AdHoc/res/values/styles.xml
+++ b/AdHoc/res/values/styles.xml
@@ -27,17 +27,6 @@
         <item name="android:typeface">serif</item>
     </style>
 
-    <style name="login_button_style" parent="@android:style/Widget.Button">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">#55ACEE</item>
-        <item name="android:textColor">#FFFFFF</item>
-        <item name="android:textSize">16sp</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:paddingLeft">5dp</item>
-        <item name="android:gravity">center</item>
-    </style>
-
     <style name="custom_progress_bar" parent="android:Widget.ProgressBar.Horizontal">
         <item name="android:minHeight">10dip</item>
         <item name="android:maxHeight">10dip</item>
@@ -68,6 +57,23 @@
         <item name="android:text">Button</item>
         <item name="android:textColor">#1485CC</item>
         <item name="android:textSize">18sp</item>
+    </style>
+    
+    <style name="LoginButton">
+        <item name="android:background">@drawable/states_login_button</item>
+        <item name="android:shadowColor">#FFFFFF</item>
+        <item name="android:text">Button</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:paddingLeft">5dp</item>
+        <item name="android:gravity">center</item>
+    </style>
+        <style name="login_button_style" parent="@android:style/Widget.Button">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">#55ACEE</item>
+
     </style>
 
 </resources>
