-change list style to have objects as cards

--- a/AdHoc/res/values/styles.xml
+++ b/AdHoc/res/values/styles.xml
@@ -24,7 +24,7 @@
     <style name="AppLoginText1" parent="@style/AppBaseTheme">
         <item name="android:textSize">100sp</item>
         <item name="android:textStyle">italic</item>
-        <item name="android:typeface">san</item>
+        <item name="android:typeface">sans</item>
     </style>
     <style name="AppLoginText2" parent="@style/AppBaseTheme">
         <item name="android:textSize">100sp</item>
