--- a/AdHoc/res/layout/fragment_item_event.xml
+++ b/AdHoc/res/layout/fragment_item_event.xml
@@ -2,12 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#c8eb5d" >
+    android:paddingBottom="@dimen/activity_vertical_small_margin">
 
     <RelativeLayout
         android:id="@+id/rlListContent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#c8eb5d" 
         android:paddingBottom="@dimen/activity_vertical_small_margin"
         android:paddingLeft="@dimen/activity_horizontal_small_margin"
         android:paddingRight="@dimen/activity_horizontal_small_margin"
