--- a/AdHoc/res/layout/fragment_item_event.xml
+++ b/AdHoc/res/layout/fragment_item_event.xml
@@ -8,7 +8,7 @@
         android:id="@+id/rlListContent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/layout_rounded"
+        android:background="@drawable/states_list_item"
         android:paddingBottom="@dimen/activity_vertical_small_margin"
         android:paddingLeft="@dimen/activity_horizontal_small_margin"
         android:paddingRight="@dimen/activity_horizontal_small_margin"
