--- a/AdHoc/res/layout/fragment_create_event_data.xml
+++ b/AdHoc/res/layout/fragment_create_event_data.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CreateEventDataFragment"
-    android:background="#c8eb5d" >
+    android:background="#afce7f" >
 
     <RelativeLayout
         android:padding="@dimen/small_padding"
